# transcodingByOpenCV

./: CMakeLists.txt  README.md  main.cpp
